apps/lite/ui/src/routes/project/$id/workspace/Details.module.css
.container {
	display: grid;
	grid-template-rows: auto minmax(0, 1fr);
	row-gap: 12px;
}

.headerWrap {
	display: flex;
	row-gap: 12px;
	flex-direction: column;
	padding-inline: var(--panel-padding);
	padding-top: var(--panel-padding);
}

.titleRow {
	display: flex;
	column-gap: 12px;
	align-items: center;
}

.titleRowMacSpacer {
	flex-shrink: 0;
	align-self: stretch;
	width: 60px;
}

.titleRowActions {
	margin-inline-start: auto;
}

.commitBodyToggle {
	width: 24px;
	height: 14px;
}

.title {
	display: flex;
	column-gap: 8px;
	align-items: center;
}

.actions {
	display: flex;
	align-items: center;
	gap: 6px;
}

.diffControls {
	display: flex;
	margin-inline-start: auto;
	gap: 6px;
}

.toggle {
	&[data-pressed] {
		--button-border: 1px solid var(--border-2);
		--button-bg: var(--bg-2);
		--button-icon-opacity: 0.9;
	}
}

.panels {
	column-gap: 6px;
}

.panel {
	/* Stretch single child element to fill this element. */
	display: grid;
	grid-template-rows: minmax(0, 1fr);
}

.resizeHandle {
	width: 1px;

	&[data-separator="hover"],
	&[data-separator="active"] {
		background-color: var(--border-2);
	}
}

.loadingTab {
	padding-inline: var(--panel-padding);
	padding-block-end: var(--panel-padding);
}

.diffTab {
	display: grid;
	grid-template-rows: auto minmax(0, 1fr);
	row-gap: 12px;
	padding-inline: var(--panel-padding);
}

.diffFiles {
	padding-bottom: var(--panel-padding);
}

.diffContentsContainer {
	display: grid;
}

.diffContents {
	--diffs-font-size: 12px;
	--diffs-bg-selection-number-override: color-mix(
		var(--fill-gray-bg) var(--opacity-bg-selected-blur),
		transparent
	);
	--diffs-bg-selection-override: transparent;

	overflow: auto;
	user-select: text;

	diffs-container {
		--diffs-selection-number-fg: var(--text-1);
	}

	[data-selection-scope]:focus-within & {
		--diffs-bg-selection-number-override: var(--fill-gray-bg);

		diffs-container {
			--diffs-selection-number-fg: var(--fill-gray-fg);
		}
	}
}

.avatar {
	width: 16px;
	height: 16px;
	border-radius: 50%;
	background-color: lightgray;
}

.toggleAvatar {
	width: 14px;
	height: 14px;
	border-radius: 50%;
	background-color: lightgray;
}

.heading {
	margin-block-end: 14px;
}

.commitHeader {
	display: flex;
	gap: 6px;
}

.commitMessageBody {
	max-width: 70ch;
	font-size: 12px;
	line-height: 160%;
	white-space: pre-wrap;
	user-select: text;
}

.tabsRow {
	display: flex;
	column-gap: 12px;
}

.tabsRowRight {
	margin-inline-start: auto;
}

.prTab {
	padding-inline: var(--panel-padding);
	padding-block-end: var(--panel-padding);
}

.prForm {
	display: flex;
	row-gap: 12px;
	flex-direction: column;
	max-width: 700px;
}

.prFormField {
	display: flex;
	row-gap: 4px;
	flex-direction: column;
}

.prTitleInput,
.prDescriptionInput {
	padding-inline: 8px;
	padding-block: 6px;
	border: 1px solid var(--border-2);
	border-radius: var(--radius-l);
	background-color: var(--bg-1);
}

.prDescriptionInput {
	field-sizing: content;
	min-height: 16lh;
	max-height: 20lh;
	resize: none;
}

.prFormActions {
	display: flex;
	column-gap: 4px;
	justify-content: flex-end;
}

.fileHeader {
	display: grid;
	grid-template-columns: 1fr auto auto auto;
	column-gap: 12px;
	align-items: center;
	justify-content: space-between;
	padding: 8px;
	border: 1px solid var(--border-3);
	border-radius: 10px 10px 0 0;
	white-space: nowrap;

	&.lone {
		border-radius: 10px;
	}
}

.fileHeaderActions {
	display: flex;
}

.filePath {
	overflow: hidden;
	color: var(--text-3);

	/* Overflow ellipsis on the left, pioritising filename. */
	direction: rtl;
	text-align: left;
	text-overflow: ellipsis;
}

.fileDiffAdded {
	color: var(--text-safe);
}

.fileDiffDeleted {
	color: #d34832;
}

.pathLast {
	color: var(--text-1);
}

.hunkHeaderRow {
	display: flex;
	column-gap: 4px;
	align-items: center;
	margin: 8px;

	svg {
		display: block;
	}
}

.hunkHeader {
	flex-grow: 1;
}

.emptyFileHunks {
	margin: 8px;
}

.commitDetailsMeta {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	gap: 8px;
	color: var(--text-3);
}

